# decision-schema

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ECOSYSTEM_CONTRACT_MATRIX.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
decision_schema/: __init__.py  compat.py  packet_v2.py  trace_registry.py  types.py  version.py
docs/: ARCHITECTURE.md  DEPRECATION_PLAN.md  FORMULAS.md  INTEGRATION_GUIDE.md  PARAMETER_INDEX.md  RELEASE_NOTES_0.2.1.md  RELEASE_NOTES_0.2.2.md  RELEASE_PLAN.md  TRACE_KEY_REGISTRY.md
docs/examples/: example_domain_legacy_migration.md
tests/: test_compat_gate_expected_minor_2.py  test_contract_matrix.py  test_invariant_0_domain_agnosticism.py  test_invariant_2_no_cross_core_imports.py  test_invariant_ci_0_workflow_hygiene.py  test_invariant_t1_trace_key_registry.py  test_invariant_version_single_source.py  test_packet_v2_smoke.py  test_pkg_1_no_examples_packaged.py  test_semver_compat.py  test_types_smoke.py
tools/: check_parameter_index.py
