[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-schema"
version = "0.2.1"
description = "Decision Schema: Shared contract (SSOT) for multi-core decision ecosystem"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["decision_schema*"]

[tool.ruff]
line-length = 100
target-version = "py311"
